# cuda-graph-coloring-hash

./: .gitignore  CMakeLists.txt  Fragen.md  README.md  ReductionComp.txt  Tasks.md  asc.cuh  coloring.cuh  csr_partition_example.txt  example.cu  hash.cuh  launch.sh  load-env.sh  main-coloring.cu  main.cpp  partKernelsBench.txt  properties.hpp
benchmark/: CMakeLists.txt  bench.sh  benchCompReduce.cu  bench_comp_reduce.cu  bench_util.cuh  benchmark.cu  cli_bench.cu  coop_comp.cu  cpy_bench.cu  d1_d2_Coop.cu  d1_d2_SortNet_bench.cu  d1_opt_kernels.cu  d1_part_kernels.cu  d2_bench.cu  d2_launch_config.cu  d2_part_kernels.cu  numBlocks_bench.cu  num_blocks_bench.cu  partKernels.cu  part_kernels.cu  tail.cu  time_bench.cu
cpumultiply/: CMakeLists.txt  cpumultiply.cpp  cpumultiply.hpp  cpumultiply_loadMTX.cpp  cpumultiply_permutation.cpp  cpumultiply_printing.cpp  cpumultiply_spmv.cpp
include/: cli_parser.hpp  coloring.cuh  coloringCounters.cuh  coloring_counters.cuh  coop_launch.cuh  copyKernel.cuh  copy_kernel.cuh  cpu_coloring.hpp  cpu_coloring_thrust.cuh  d1_opt_kernel.cuh  d1_part_kernels.cuh  d2_opt_kernel.cuh  defines.hpp  hash.cuh  init.hpp  kernel_setup.hpp  mat_loader.hpp  odd_even_sort.hpp  partKernels.cuh  part_kernels.cuh  reduceCompKernels.cuh  reduce_comp_kernels.cuh  setup.cuh  util.cuh
include/V2/: WarpHash.cuh  WarpHashCoop.cuh  WarpHashCoopTime.cuh  warp_hash_coop.cuh  warp_hash_coop_tail.cuh
my_tiling/: tiling_test.cpp
tests/: 00_Partition2ShMem.cuh  00_Reduce_inl.cuh  00_coloring_test.cu  CMakeLists.txt  add.cuh  cpu_brev.hpp  cpu_coloring.hpp  cpu_coloring_thrust.cuh  cu_test1.cu  kernelTestsD1.cu  kernelTestsD2.cu  test.sh
tiling/: CMakeLists.txt  tiling.cpp  tiling.hpp  tiling_accessories.cpp  tiling_coarsening.cpp  tiling_equipartitioning.cpp  tiling_metising.cpp  tiling_offset.cpp  tiling_redcal.cpp  tiling_sectioning.cpp  tiling_triangular.cpp
